--- a/res/layout/ask_frag.xml
+++ b/res/layout/ask_frag.xml
@@ -5,8 +5,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
     <ImageView android:id="@+id/ivPhoto" android:layout_width="match_parent" android:layout_height="match_parent"
-               android:scaleType="center"
-               android:src="@drawable/photo"/>
+               android:scaleType="fitXY"
+               android:src="@drawable/photo"
+               android:focusable="true"
+               android:focusableInTouchMode="true"
+               android:clickable="true"/>
     <LinearLayout
             android:id="@+id/question_container"
             android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -15,6 +18,8 @@
             android:background="#FFFFFF"
             android:alpha="0.5"
             android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:clickable="true"
             android:orientation="vertical">
         <!--<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">-->
         <!--<LinearLayout android:id="@+id/avatar" android:layout_width="wrap_content"-->
@@ -37,7 +42,6 @@
                   android:text="这个岛上有酒店吗?"
                   android:textColor="#000000" android:inputType="textImeMultiLine"
                 >
-            <requestFocus />
         </EditText>
 
 
