--- a/res/layout/camera_frag.xml
+++ b/res/layout/camera_frag.xml
@@ -4,22 +4,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/main_color"
         >
-
-    <RelativeLayout android:layout_width="match_parent" android:layout_height="40dp"
-                    android:padding="5dp"
-                    android:background="#000000"
-                    android:gravity="center_vertical">
-        <ImageView android:id="@+id/ivClose" android:layout_width="wrap_content" android:layout_height="wrap_content"
-                   android:src="@drawable/avatar"/>
-        <ImageView android:id="@+id/ivReverse" android:layout_width="wrap_content" android:layout_height="wrap_content"
-                   android:layout_centerInParent="true"
-                   android:src="@drawable/avatar"/>
-        <ImageView android:id="@+id/ivLight" android:layout_width="wrap_content" android:layout_height="wrap_content"
-                   android:layout_toRightOf="@id/ivReverse"
-                   android:layout_marginLeft="10dp"
-                   android:src="@drawable/avatar"/>
-    </RelativeLayout>
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
                   android:layout_weight="1.0"
