--- a/res/layout/drawing_frag.xml
+++ b/res/layout/drawing_frag.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:background="@color/main_color">
     <com.lutours.tuwen.view.DrawingView android:id="@+id/dvCanvas" android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:scaleType="fitXY"
@@ -13,4 +14,4 @@
                                         android:focusableInTouchMode="true"
                                         android:clickable="true"/>
 
-</RelativeLayout>
+</LinearLayout>
