- 暂不使用 ActionBar, 去除module 依赖 - 拍-画-问 第一次串联结束 鼓掌

--- a/res/layout/answer_frag.xml
+++ b/res/layout/answer_frag.xml
@@ -5,6 +5,29 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="#FFFFFF">
+    <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/main_color"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="fill_horizontal">
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:id="@+id/back_button"
+                android:src="@drawable/back_button"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:id="@+id/next_button"
+                android:text="保存"
+                android:textColor="#FFFFFF"
+                android:textSize="18dp"/>
+    </RelativeLayout>
     <LinearLayout android:id="@+id/question_container" android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
