--- a/res/layout/drawing_frag.xml
+++ b/res/layout/drawing_frag.xml
@@ -4,14 +4,40 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:background="@color/main_color">
-    <com.lutours.tuwen.view.DrawingView android:id="@+id/dvCanvas" android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:scaleType="fitXY"
-                                        android:src="@drawable/photo"
+                android:background="@color/background_color">
+    <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/main_color"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="fill_horizontal">
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:id="@+id/back_button"
+                android:src="@drawable/back_button"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:id="@+id/next_button"
+                android:text="提问"
+                android:textColor="#FFFFFF"
+                android:textSize="18dp"/>
+    </RelativeLayout>
+    <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
+                  android:layout_weight="1.0"
+                  android:gravity="center_vertical">
+        <com.lutours.tuwen.view.DrawingView android:id="@+id/dvCanvas" android:layout_width="match_parent"
+                                            android:layout_height="match_parent"
+                                            android:scaleType="fitXY"
+                                            android:src="@drawable/photo"
                                         android:focusable="true"
                                         android:focusableInTouchMode="true"
                                         android:clickable="true"/>
 
+    </LinearLayout>
 </LinearLayout>
