--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="background_color">#000</color>
     <color name="main_color">#6BA9B8</color>
 </resources>
