--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,5 +5,23 @@
              android:layout_height="match_parent"
              android:orientation="vertical" >
 
+    <FrameLayout
+            android:id="@+id/frag_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1"/>
+
+    <android.support.v4.app.FragmentTabHost
+            android:id="@android:id/tabhost"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"/>
+    </android.support.v4.app.FragmentTabHost>
+
 </FrameLayout>
 
