仿 Instagram 的 backstack (自定义 FragmentTabHost)

--- a/res/layout/question_list_frag.xml
+++ b/res/layout/question_list_frag.xml
@@ -7,9 +7,13 @@
 
 
     <GridView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/gridView"
             android:numColumns="3"
-            android:layout_gravity="center_horizontal"/>
+            android:verticalSpacing="10dp"
+            android:horizontalSpacing="10dp"
+            android:stretchMode="columnWidth"
+            android:background="@color/main_color"
+            android:layout_gravity="center"/>
 </LinearLayout>
