--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:id="@+id/frag_container"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical" >
-
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="5dp">
     <FrameLayout
-            android:id="@+id/frag_container"
+            android:id="@+id/tabFrameLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dip"
+            android:layout_height="0dp"
             android:layout_weight="1"/>
 
-    <android.support.v4.app.FragmentTabHost
+    <com.lutours.tuwen.view.MyFragmentTabHost
             android:id="@android:id/tabhost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+        <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
         <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"/>
-    </android.support.v4.app.FragmentTabHost>
+                android:layout_height="wrap_content"/>
 
-</FrameLayout>
+    </com.lutours.tuwen.view.MyFragmentTabHost>
 
+</LinearLayout>
