--- a/res/layout/question_list_item.xml
+++ b/res/layout/question_list_item.xml
@@ -7,7 +7,7 @@
 
 
     <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
             android:id="@+id/imageView"/>
 </LinearLayout>
