--- a/res/layout/question_list_item.xml
+++ b/res/layout/question_list_item.xml
@@ -8,6 +8,6 @@
 
     <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="90dp"
+            android:layout_height="match_parent"
             android:id="@+id/imageView"/>
 </LinearLayout>
