--- a/res/layout/question_list_frag.xml
+++ b/res/layout/question_list_frag.xml
@@ -13,7 +13,5 @@
             android:numColumns="3"
             android:verticalSpacing="5dp"
             android:horizontalSpacing="5dp"
-            android:stretchMode="columnWidth"
-            android:background="@color/main_color"
-            android:layout_gravity="center"/>
+            android:background="@color/main_color"/>
 </LinearLayout>
