--- a/res/layout/ask_frag.xml
+++ b/res/layout/ask_frag.xml
@@ -4,7 +4,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#FFFFFF">
+              android:background="#FFFFFF"
+              android:clickable="true">
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/main_color"
