--- a/res/layout/drawing_frag.xml
+++ b/res/layout/drawing_frag.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/background_color">
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/background_color"
+              android:clickable="true">
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/main_color"
@@ -35,9 +36,9 @@
                                             android:layout_height="match_parent"
                                             android:scaleType="fitXY"
                                             android:src="@drawable/photo"
-                                        android:focusable="true"
-                                        android:focusableInTouchMode="true"
-                                        android:clickable="true"/>
+                                            android:focusable="true"
+                                            android:focusableInTouchMode="true"
+                                            android:clickable="true"/>
 
     </LinearLayout>
 </LinearLayout>
