--- a/res/layout/question_list_frag.xml
+++ b/res/layout/question_list_frag.xml
@@ -4,14 +4,36 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/main_color"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="fill_horizontal">
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:id="@+id/back_button"
+                android:src="@drawable/back_button"/>
 
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:id="@+id/next_button"
+                android:text="设置"
+                android:textColor="#FFFFFF"
+                android:textSize="18dp"/>
+    </RelativeLayout>
 
     <GridView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/gridView"
+            android:layout_margin="5dp"
             android:numColumns="3"
             android:verticalSpacing="5dp"
-            android:horizontalSpacing="5dp"
-            android:background="@color/main_color"/>
+            android:horizontalSpacing="5dp"/>
 </LinearLayout>
